--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -106,3 +106,28 @@
     display: flex;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .gpt3__navbar {
+    padding: 2rem 4rem;
+  }
+
+  .gpt3__navbar-menu {
+    display: flex;
+  }
+}
+@media screen and (max-width: 550px) {
+  .gpt3__navbar {
+    padding: 2rem;
+  }
+
+  .gpt3__navbar-sign {
+    display: none;
+  }
+  .gpt3__navbar-menu_container {
+    top: 20px;
+  }
+  .gpt3__navbar-menu_container-links-sign {
+    display: block;
+  }
+}
